# apdl-highlighter

./: .gitignore  CMakeLists.txt  README.md  common.cpp  common.h  highlight_config.cpp  highlight_config.h  highlighter.cpp  highlighter.h  main.cpp
config/: config.txt  et_hints.txt  hints.txt  hints_eng.txt  hints_hun.txt  newRules.txt  rules.txt
help_v18.2/ans_cmd/: Hlp_A_TOC.html  Hlp_B_TOC.html  Hlp_C_A.html  Hlp_C_AADD.html  Hlp_C_AATT.html  Hlp_C_ABBR.html  Hlp_C_ABBRES.html  Hlp_C_ABBSAV.html  Hlp_C_ABEXTRACT.html  Hlp_C_ABS.html  Hlp_C_ACCAT.html  Hlp_C_ACCOPTION.html  Hlp_C_ACEL.html  Hlp_C_ACLEAR.html  Hlp_C_ADAMS.html  Hlp_C_ADD.html  Hlp_C_ADDAM.html  Hlp_C_ADELE.html  Hlp_C_ADGL.html  Hlp_C_ADRAG.html  Hlp_C_AEROCOEFF.html  Hlp_C_AESIZE.html  Hlp_C_AFILLT.html  Hlp_C_AFLIST.html  Hlp_C_AFSURF.html  Hlp_C_AFUN.html  Hlp_C_AGEN.html  Hlp_C_AGLUE.html  Hlp_C_AINA.html  Hlp_C_AINP.html  Hlp_C_AINV.html  Hlp_C_AL.html  Hlp_C_ALIST.html  Hlp_C_ALLSEL.html  Hlp_C_ALPHAD.html  Hlp_C_AMAP.html  Hlp_C_AMESH.html  Hlp_C_AN3D.html  Hlp_C_ANCNTR.html  Hlp_C_ANCUT.html  (+1464 more)
help_v18.2/ans_elem/: Hlp_E_ABOUT.html  Hlp_E_AutoSelectElems.html  Hlp_E_BEAM161.html  Hlp_E_BEAM188.html  Hlp_E_BEAM189.html  Hlp_E_BIBLIO.html  Hlp_E_BeamElements.html  Hlp_E_CH1_2_1.html  Hlp_E_CH2_1.html  Hlp_E_CH2_2.html  Hlp_E_CH2_3.html  (+184 more)
input/: D1.txt  D3.txt  D4.txt  D5.txt  D7.txt  H1.txt  H3.txt  P1.txt  R1.txt  R3.txt  S3.txt  SOL1.txt  SOL2.txt  ST1.txt  ST3.txt  T1.txt  TeXheader.tex  index.html  myScripts.js  style.css
tex/: .gitignore  apdl.cls  apdl_mod.cls  proba.tex  proba_mod.tex
(+494 files in other folders)
